tweaks and style

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,11 +1,10 @@
 @import 'variables';
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
 
-body {
-  background-color: $favColor;
-}
+// body {
+//   background-color: $favColor;
+// }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'Lora', serif;
 }
