--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,10 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora&family=Lato&display=swap');
 
 body {
-background: #0F2027;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+background: #0a4457;
 margin-top: 100px;
 }
 
@@ -12,10 +9,8 @@ margin-top: 100px;
   background-color: white;
   width: 40rem;
   margin: auto;
-  font-family: 'Cutive Mono', monospace;
-  border-top-left-radius: 40px;
-  border-top-right-radius: 40px;
-  border-bottom-right-radius: 40px;
+  font-family: 'Lora', serif;
+  border-radius: 30px;
   padding: 30px;
 }
 
@@ -37,31 +32,15 @@ Button {
 
 #artistInfo {
   text-align: center;
-  font-family: 'Cutive Mono', monospace;
+  font-family: 'Lora', serif;
   color: white;
   margin: 30px;
 }
 
 #contentContainer {
   white-space: pre-line;
-  font-family: 'Cutive Mono', monospace;
+  font-family: 'Lora', serif;
   color: white;
   text-align: center;
   margin: 30px;
-}
-
-@media only screen and (max-width: 769px) {
-  form {
-    background-color: white;
-    width: 25rem;
-    margin: auto;
-    font-family: 'Cutive Mono', monospace;
-    border-top-left-radius: 40px;
-    border-top-right-radius: 40px;
-    border-bottom-right-radius: 40px;
-  }
-}
-
-.requested-lyrics {
-  white-space: pre-line;
 }
