--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,3 +10,42 @@ margin-top: 100px;
 code {
   font-family: 'Lora', serif;
 }
+
+.form {
+  background-color: white;
+  width: 40rem;
+  margin: auto;
+  font-family: 'Lora', serif;
+  border-radius: 50px;
+  padding: 30px;
+}
+
+#formGroup {
+  margin: auto;
+  padding: 10px;
+  width: 30rem;
+}
+
+#artist-label {
+  margin-top: 25px;
+}
+
+Button {
+  margin-top: 30px;
+  margin-left: 55px;
+}
+
+#artistInfo {
+  text-align: center;
+  font-family: 'Lora', serif;
+  color: white;
+  margin: 30px;
+}
+
+#contentContainer {
+  white-space: pre-line;
+  font-family: 'Lora', serif;
+  color: white;
+  text-align: center;
+  margin: 30px;
+}
